syntax = "proto3";

package user.v1;

option go_package = "./user";


service UserService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Deregister(DeregisterRequest) returns (DeregisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Logout(LogoutRequest) returns (LogoutResponse);
}

message RegisterRequest {
    string username = 1;
    string password = 2;
}

message RegisterResponse {
    uint64 user_id = 1;
}

message DeregisterRequest {
    string username = 1;
    string password = 2;
}

message DeregisterResponse {
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string access_token = 1;
    string refresh_token = 2;
    uint64 user_id = 3;
}

message LogoutRequest {
    string access_token = 1;
    string refresh_token = 2;
}

message LogoutResponse {
}